# pytenso

./: .gitignore  LICENSE  README.md  setup.cfg
examples/1-toy_sbm/a-pure_dephasing/: heom.py  mctdh.py
examples/1-toy_sbm/b-relaxation/: heom.py  mctdh.py
examples/1-toy_sbm/c-compare_tn/: heom-naive.py  heom-train.py  heom-tree.py
examples/2-realistic_sbm/: heom.py  mctdh.py
examples/3-fmo/a-50fs/: heom.py  mctdh.py
examples/3-fmo/b-106fs/: heom.py  mctdh.py
src/tenso/basis/: dvr.py
src/tenso/bath/: correlation.py  distribution.py  sd.py  star.py  tedopa.py
src/tenso/heom/: eom.py  meom.py  multieom.py
src/tenso/libs/: backend.py  drawing.py  logging.py  quantity.py  utils.py
src/tenso/mctdh/: eom.py
src/tenso/operator/: sparse.py
src/tenso/prototypes/: bath.py  default_parameters.py  heom.py  mctdh.py
src/tenso/state/: pureframe.py  puremodel.py
