[metadata]
name = tenso-ifgroup
version = 0.0.1
author = Xinxian Chen
author_email = xchen106@ur.rochester.edu
description =  A general python package to simulate open quantum systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ifgroup/pytenso
project_urls =
    Bug Tracker = https://github.com/ifgroup/pytenso/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.13
install_requires = 
    torch >= 2.6.0
    torchdiffeq >= 0.2.5
    tqdm >= 4.64.0

[options.packages.find]
where = src
